--- a/src/main/java/test/enterPlayerInformation.fxml
+++ b/src/main/java/test/enterPlayerInformation.fxml
@@ -5,11 +5,10 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controllers.UpdateMatchInformationController">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="test.EnterPlayerInformationController">
     <Button layoutX="7.0" layoutY="364.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="26.0" prefWidth="66.0" styleClass="button-7" text="Back" wrapText="true" />
 
-    <Label alignment="CENTER" layoutX="122.0" layoutY="22.0" prefHeight="39.0" prefWidth="356.0" text="Update Match Information" wrapText="true">
+    <Label alignment="CENTER" layoutX="193.0" layoutY="14.0" prefHeight="39.0" prefWidth="213.0" text="Add New Player" wrapText="true">
         <font>
             <Font name="System Bold Italic" size="27.0" />
         </font>
@@ -35,8 +34,12 @@
             </LinearGradient>
         </textFill>
     </Label>
-
-    <Label alignment="CENTER" layoutX="65.0" layoutY="174.0" prefHeight="39.0" prefWidth="150.0" text="Match Date" wrapText="true">
+    <TextField fx:id="idField" layoutX="247.0" layoutY="76.0" prefHeight="25.0" prefWidth="250.0" promptText="name" />
+    <TextField fx:id="nameField" layoutX="247.0" layoutY="113.0" prefHeight="25.0" prefWidth="250.0" promptText="name" />
+    <TextField fx:id="captainNameField" layoutX="247.0" layoutY="150.0" prefHeight="25.0" prefWidth="250.0" promptText="position" />
+    <TextField fx:id="totalScoreField" layoutX="247.0" layoutY="188.0" prefHeight="25.0" prefWidth="250.0" promptText="age" />
+    <TextField fx:id="matchesField" layoutX="247.0" layoutY="226.0" prefHeight="25.0" prefWidth="250.0" promptText="score" />
+    <Label alignment="CENTER" layoutX="80.0" layoutY="65.0" prefHeight="39.0" prefWidth="150.0" text="name" wrapText="true">
         <font>
             <Font name="System Bold Italic" size="20.0" />
         </font>
@@ -62,8 +65,7 @@
             </LinearGradient>
         </textFill>
     </Label>
-
-    <Label alignment="CENTER" layoutX="14.0" layoutY="217.0" prefHeight="39.0" prefWidth="182.0" text="Score (if finished)" wrapText="true">
+    <Label alignment="CENTER" layoutX="80.0" layoutY="102.0" prefHeight="39.0" prefWidth="150.0" text="number" wrapText="true">
         <font>
             <Font name="System Bold Italic" size="20.0" />
         </font>
@@ -89,8 +91,7 @@
             </LinearGradient>
         </textFill>
     </Label>
-
-    <Label alignment="CENTER" layoutX="59.0" layoutY="264.0" prefHeight="39.0" prefWidth="150.0" text="Stadium" wrapText="true">
+    <Label alignment="CENTER" layoutX="67.0" layoutY="139.0" prefHeight="39.0" prefWidth="150.0" text="position" wrapText="true">
         <font>
             <Font name="System Bold Italic" size="20.0" />
         </font>
@@ -116,8 +117,7 @@
             </LinearGradient>
         </textFill>
     </Label>
-
-    <Label alignment="CENTER" layoutX="54.0" layoutY="301.0" prefHeight="39.0" prefWidth="150.0" text="Referee" wrapText="true">
+    <Label alignment="CENTER" layoutX="80.0" layoutY="177.0" prefHeight="39.0" prefWidth="150.0" text="age" wrapText="true">
         <font>
             <Font name="System Bold Italic" size="20.0" />
         </font>
@@ -143,8 +143,7 @@
             </LinearGradient>
         </textFill>
     </Label>
-
-    <Label alignment="CENTER" layoutX="65.0" layoutY="91.0" prefHeight="39.0" prefWidth="150.0" text="First Team" wrapText="true">
+    <Label alignment="CENTER" layoutX="80.0" layoutY="215.0" prefHeight="39.0" prefWidth="150.0" text="score" wrapText="true">
         <font>
             <Font name="System Bold Italic" size="20.0" />
         </font>
@@ -170,49 +169,36 @@
             </LinearGradient>
         </textFill>
     </Label>
-
-    <Label alignment="CENTER" layoutX="65.0" layoutY="134.0" prefHeight="39.0" prefWidth="150.0" text="Second Team" wrapText="true">
-        <font>
-            <Font name="System Bold Italic" size="20.0" />
-        </font>
-        <textFill>
-            <LinearGradient cycleMethod="REPEAT" endX="1.0" endY="1.0">
-                <stops>
-                    <Stop>
-                        <color>
-                            <Color red="1.0" green="0.31481480598449707" blue="0.31481480598449707" />
-                        </color>
-                    </Stop>
-                    <Stop offset="0.4178082191780822">
-                        <color>
-                            <Color red="1.0" green="1.0" blue="1.0" />
-                        </color>
-                    </Stop>
-                    <Stop offset="1.0">
-                        <color>
-                            <Color red="0.39181286096572876" green="0.9473684430122375" blue="0.7714424729347229" />
-                        </color>
-                    </Stop>
-                </stops>
-            </LinearGradient>
-        </textFill>
-    </Label>
-
-    <DatePicker fx:id="datePicker" layoutX="215.0" layoutY="187.0" prefHeight="25.0" prefWidth="250.0" promptText="Match Date" />
-
-    <TextField fx:id="scoreField" layoutX="215.0" layoutY="230.0" prefHeight="25.0" prefWidth="250.0" promptText="Score (if finished)" />
-
-    <ComboBox fx:id="stadiumComboBox" layoutX="215.0" layoutY="271.0" prefHeight="25.0" prefWidth="250.0" promptText="Stadium" />
-
-    <ComboBox fx:id="refereeComboBox" layoutX="215.0" layoutY="314.0" prefHeight="25.0" prefWidth="250.0" promptText="Referee" />
-
-    <ComboBox fx:id="team1NameComboBox" layoutX="215.0" layoutY="104.0" prefHeight="25.0" prefWidth="250.0" promptText="First Team" />
-
-    <ComboBox fx:id="team2NameComboBox" layoutX="215.0" layoutY="141.0" prefHeight="25.0" prefWidth="250.0" promptText="Second Team" />
-
-    <Button layoutX="235.0" layoutY="351.0" mnemonicParsing="false" onAction="#onUpdateMatchClick" prefHeight="37.0" prefWidth="129.0" styleClass="button-7" text="Update" wrapText="true" />
-   <TextField fx:id="matchIdTextField" layoutX="215.0" layoutY="69.0" prefHeight="25.0" prefWidth="250.0" promptText="match id" />
-   <Label alignment="CENTER" layoutX="63.0" layoutY="62.0" prefHeight="39.0" prefWidth="150.0" text="Match id" wrapText="true">
+    <Button layoutX="266.0" layoutY="339.0" mnemonicParsing="false" onAction="#onEnterClick" prefHeight="37.0" prefWidth="129.0" styleClass="button-7" text="ADD" wrapText="true" />
+   <TextField fx:id="matchesField11" layoutX="247.0" layoutY="299.0" prefHeight="25.0" prefWidth="250.0" promptText="team" />
+   <Label alignment="CENTER" layoutX="80.0" layoutY="288.0" prefHeight="39.0" prefWidth="150.0" text="team" wrapText="true">
+      <font>
+         <Font name="System Bold Italic" size="20.0" />
+      </font>
+      <textFill>
+         <LinearGradient cycleMethod="REPEAT" endX="1.0" endY="1.0">
+            <stops>
+               <Stop>
+                  <color>
+                     <Color red="1.0" green="0.31481480598449707" blue="0.31481480598449707" />
+                  </color>
+               </Stop>
+               <Stop offset="0.4178082191780822">
+                  <color>
+                     <Color red="1.0" green="1.0" blue="1.0" />
+                  </color>
+               </Stop>
+               <Stop offset="1.0">
+                  <color>
+                     <Color red="0.39181286096572876" green="0.9473684430122375" blue="0.7714424729347229" />
+                  </color>
+               </Stop>
+            </stops>
+         </LinearGradient>
+      </textFill>
+   </Label>
+   <TextField fx:id="matchesField111" layoutX="247.0" layoutY="262.0" prefHeight="25.0" prefWidth="250.0" promptText="rank" />
+   <Label alignment="CENTER" layoutX="80.0" layoutY="251.0" prefHeight="39.0" prefWidth="150.0" text="rank" wrapText="true">
       <font>
          <Font name="System Bold Italic" size="20.0" />
       </font>
