--- a/src/main/resources/com/example/egyptian_league_management_system/playerPane.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/playerPane.fxml
@@ -6,37 +6,37 @@
 
 <AnchorPane prefHeight="244.0" prefWidth="400.0" style="-fx-background-color: #303030;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controllers.PlayerPaneController">
 
-<Label  alignment="CENTER" layoutX="15.0" layoutY="26.0" prefHeight="70.0" prefWidth="449.0" style="-fx-text-fill: white;" text="Player Name">
+<Label fx:id="labelName" alignment="CENTER" layoutX="15.0" layoutY="26.0" prefHeight="70.0" prefWidth="449.0" style="-fx-text-fill: white;" text="Player Name">
         <font>
             <Font size="27.0" />
         </font>
     </Label>
-    <Label  layoutX="23.0" layoutY="107.0" prefHeight="42.0" prefWidth="200.0" style="-fx-text-fill: white;" text="Team: ">
+    <Label fx:id="labelTeam" layoutX="23.0" layoutY="107.0" prefHeight="42.0" prefWidth="200.0" style="-fx-text-fill: white;" text="Team: ">
         <font>
             <Font size="21.0" />
         </font>
     </Label>
-    <Label  layoutX="23.0" layoutY="147.0" prefHeight="42.0" prefWidth="200.0" style="-fx-text-fill: white;" text="Age: ">
+    <Label fx:id="labelAge" layoutX="23.0" layoutY="147.0" prefHeight="42.0" prefWidth="200.0" style="-fx-text-fill: white;" text="Age: ">
         <font>
             <Font size="21.0" />
         </font>
     </Label>
-    <Label  layoutX="23.0" layoutY="189.0" prefHeight="42.0" prefWidth="200.0" style="-fx-text-fill: white;" text="Position: ">
+    <Label fx:id="labelPosition" layoutX="23.0" layoutY="189.0" prefHeight="42.0" prefWidth="200.0" style="-fx-text-fill: white;" text="Position: ">
         <font>
             <Font size="21.0" />
         </font>
     </Label>
-    <Label  layoutX="350.0" layoutY="110.0" prefHeight="35.0" prefWidth="111.0" style="-fx-text-fill: white;" text="Rank: ">
+    <Label fx:id="labelRank" layoutX="350.0" layoutY="110.0" prefHeight="35.0" prefWidth="111.0" style="-fx-text-fill: white;" text="Rank: ">
         <font>
             <Font size="21.0" />
         </font>
     </Label>
-    <Label  layoutX="350.0" layoutY="150.0" prefHeight="35.0" prefWidth="111.0" style="-fx-text-fill: white;" text="Score: ">
+    <Label fx:id="labelScore" layoutX="350.0" layoutY="150.0" prefHeight="35.0" prefWidth="111.0" style="-fx-text-fill: white;" text="Score: ">
         <font>
             <Font size="21.0" />
         </font>
     </Label>
-    <Label  layoutX="350.0" layoutY="192.0" prefHeight="35.0" prefWidth="111.0" style="-fx-text-fill: white;" text="Number: ">
+    <Label fx:id="labelNumber" layoutX="350.0" layoutY="192.0" prefHeight="35.0" prefWidth="111.0" style="-fx-text-fill: white;" text="Number: ">
         <font>
             <Font size="21.0" />
         </font>
